<resources>
    <string name="app_name">TaskManager</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="delete_task">Delete Task</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="title_cannot_be_empty">Title cannot be empty</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="send">Send</string>
    <string name="enter_code_from_sms">Enter Code from SMS</string>
    <string name="accept">Accept</string>
    <string name="any_error">Something is wrong</string>
    <string name="exit_profile">Exit Profile</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="failure">Failure</string>
    <string name="successfully_saved">Successfully saved!</string>
    <string name="phone">Phone</string>
    <string name="google">Google</string>
    <string name="skip">Skip</string>
    <string name="desc">Desc</string>
    <string name="get_started">Get Started</string>
</resources>