<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.taskmanager.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.taskmanager.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.taskmanager.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.taskmanager.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/taskFragment"
        android:name="com.example.taskmanager.ui.task.TaskFragment"
        android:label="Task"
        tools:layout="@layout/fragment_task" />
    
    <fragment
        android:id="@+id/onBoardingFragment"
        android:name="com.example.taskmanager.ui.onboarding.OnBoardingFragment"
        android:label="fragment_on_boarding"
        tools:layout="@layout/fragment_on_boarding" />

    <fragment
        android:id="@+id/phoneFragment"
        android:name="com.example.taskmanager.ui.auth.phone.PhoneFragment"
        android:label="fragment_phone"
        tools:layout="@layout/fragment_phone" />

    <fragment
        android:id="@+id/verifyFragment"
        android:name="com.example.taskmanager.ui.auth.verify.VerifyFragment"
        android:label="fragment_verify"
        tools:layout="@layout/fragment_verify" />

    <fragment
        android:id="@+id/authFragment"
        android:name="com.example.taskmanager.ui.auth.AuthFragment"
        android:label="fragment_auth"
        tools:layout="@layout/fragment_auth" />

    <fragment
        android:id="@+id/googleFragment"
        android:name="com.example.taskmanager.ui.auth.google.GoogleFragment"
        android:label="fragment_google"
        tools:layout="@layout/fragment_google" />

</navigation>